Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,16 +8,12 @@
                 <a href="/">ぷらむ日記</a>
             </h1>
         </div>
-
-        <div>
-            <p>published:2022.10.14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. こんにちは！ よろしくお願いします！</p>
-        </div>
-        <div>
-            <p>published:2022.10.14</p>
-            <h2><a href="">2番目の投稿</a></h2>
-            <p>こんにちは！ よろしくお願いします！</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
